ingress-kubevirt.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  rules:
  - host: kubevirt.ui
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
